Delete commentaries